--- a/about me.html
+++ b/about me.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Assignment 1</title>
-  <link href="style.css" rel="stylesheet" />
-  <script src="main.js"></script>
+  <link href="css/style.css" rel="stylesheet" />
+  <script src="js/main.js"></script>
 </head>
 <body>
 <h1> Spam Detector</h1>
