--- a/table.html
+++ b/table.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Assignment 1</title>
-    <link href="style.css" rel="stylesheet" />
-    <script src="main.js"></script>
-</head>
-<body>
-<h1> Spam Detector</h1>
-<A HREF="table.html">Dashboard</A>
-<A HREF="about%20me.html">About Me</A>
-<table class="center" id="chart">
-    <thead>
-    <tr>
-        <th>File</th>
-        <th>Spam Probability %</th>
-        <th>Class</th>
-    </tr>
-    </thead>
-    <tbody></tbody>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Assignment 1</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <script src="js/main.js"></script>
+    </head>
+    <body>
+        <div>
+            <h1> Spam Detector</h1>
+            <A HREF="table.html">Dashboard</A>
+            <A HREF="about%20me.html">About Me</A>
+            <table class="center" id="chart">
+                <thead>
+                <tr>
+                    <th>File</th>
+                    <th>Spam Probability %</th>
+                    <th>Class</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
 
-</table>
-<div class='parent'>
-    <div class='child1'><b>Accuracy:</b></div>
-    <div class='child2'><b></b></div>
-</div>
-<div class='parent'>
-    <div class='child1'><b>Precision:</b></div>
-    <div class='child2'><b></b></div>
-</div>
-</body>
+            </table>
+            <div class='parent'>
+                <div class='child1'><b>Accuracy:</b></div>
+                <div class='child2'><b></b></div>
+            </div>
+            <div class='parent'>
+                <div class='child1'><b>Precision:</b></div>
+                <div class='child2'><b></b></div>
+            </div>
+        </div>
+    </body>
 </html>
 
 
